--- a/estilos/partials/_baserules.scss
+++ b/estilos/partials/_baserules.scss
@@ -1,12 +1,17 @@
-*{
-    margin: 0;
-    padding: 0;
-    border: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: monospace;
-    background-color: $background-primary;
+  font-family: $font;
+  
 }
 
+.contenedor {
+    width: 1200px;
+    height: 1000px;
+    margin: 0.5em auto;
+    padding: 0.5em;
+    
+  }
