--- a/estilos/partials/_header.scss
+++ b/estilos/partials/_header.scss
@@ -1,22 +1,44 @@
-.cont-header {
-    display: flex;
-    justify-content: center;
-    margin: 10px 10px 10px 10px;
+.header {
+  height: 35%;
+  border-radius: 1em;
+  margin: 1em;
+  background: url("/assets/owasp.png") center/cover;
 }
 
-.header-logo {
+.navegacion {
+  height: 15%;
+  border-radius: 1em;
+  margin: 2em;
+  display: flex;
+  justify-content: center;
+  background-color: #dfe6e9;
   nav {
-    li {
-      
-      left: 20px;
-      top: 20px;
-      padding: 20px 20px;
-      width: 100%;
-      display: inline;
-      padding-left: 15px;
-      list-style: none;
-      line-height: 60px;
-      
-    }
+  font-family: "Oswald", sans-serif;
   }
+  ul {
+    list-style: none;
+    padding: 1em;
+    margin: 1em;
+  }
+  li {
+    display: inline-block;
+    margin: 4em;
+    border-right: 1px solid #bbb;
+    border-left: 1px solid #bbb;
+  }
+
+  a {
+    text-decoration: none;
+    font-size: 20px;
+    color: black;
+    
+  }
+
+  a:hover {
+    background-color: rgb(46, 185, 132);
+    color: black;
+    
+  }
+
+  
 }
