--- a/estilos/partials/_variables.scss
+++ b/estilos/partials/_variables.scss
@@ -1,3 +1,4 @@
-$background-primary: #a0b9f8;
+$background-primary: #8d8d8d;
 $background-secondary: #0a3d62;
 $color-primary: #0c2461;
+$font: monospace;
