--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -77,11 +77,11 @@ body {
   margin: 1em;
 }
 
-.seccion .foto img {
+.seccion .orador img {
   width: 20%;
-  height: 15%;
+  height: 10%;
   border-radius: 50%;
-  margin: 1em;
+  margin: 2em;
 }
 
 .seccion .facebook,
@@ -92,22 +92,27 @@ body {
 }
 
 .seccion p {
-  margin: 2em;
-  padding: 2em;
+  margin: 1em;
 }
 
 .seccion .sponsor {
   font-size: x-large;
   height: 20%;
-  margin: 1em;
+  margin: 5em;
 }
 
-.seccion .sp1, .seccion .sp2, .seccion .sp3 {
+.seccion .sp1,
+.seccion .sp2,
+.seccion .sp3 {
   display: inline-block;
   border: 1px solid gray;
   height: 50px;
   width: 50px;
   margin: 1em;
+}
+
+.seccion .como-llegar {
+  height: 50%;
 }
 
 .aside {
