--- a/estilos/partials/_main.scss
+++ b/estilos/partials/_main.scss
@@ -3,7 +3,6 @@
   margin: 2em;
   background-color: rgba(250, 235, 215, 0.644);
   border-radius: 1em;
-    
 }
 
 .seccion {
@@ -12,15 +11,13 @@
   border-radius: 1em;
   float: left;
   margin: 1em;
-  
- 
-  .foto img {
-    
+
+  .orador img {
     width: 20%;
-    height: 15%;
+    height: 10%;
     border-radius: 50%;
-    margin: 1em;
-    
+    margin: 2em;
+
   }
   .facebook,
   .instagram,
@@ -31,28 +28,34 @@
 }
 
 .seccion {
-
   p {
-    margin: 2em;
-    padding: 2em;
+    margin: 1em;
+    
   }
 
   .sponsor {
-
     font-size: x-large;
     height: 20%;
-    margin: 1em;
-
+    margin: 5em;
   }
 
-  .sp1, .sp2, .sp3 {
-
+  .sp1,
+  .sp2,
+  .sp3 {
     display: inline-block;
     border: 1px solid gray;
     height: 50px;
     width: 50px;
     margin: 1em;
+  }
+}
 
+
+.seccion {
+
+  .como-llegar {
+
+    height: 50%;
   }
 }
 .aside {
