--- a/estilos/partials/_header.scss
+++ b/estilos/partials/_header.scss
@@ -2,7 +2,7 @@
   height: 35%;
   border-radius: 1em;
   margin: 1em;
-  background: url("/assets/owasp.png") center/cover;
+  background: url('/assets/owasp.png') center/cover;
 }
 
 .navegacion {
