--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -18,7 +18,12 @@ body {
   height: 35%;
   border-radius: 1em;
   margin: 1em;
-  background: url("/assets/owasp.png") center/cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .navegacion {
